--- a/sidebar.css
+++ b/sidebar.css
@@ -11,20 +11,20 @@
     top: 0;
     /* Stay at the top */
     left: 0;
-    background-color: #111;
+    background-color: rgb(25, 118, 210);
     /* Black */
     overflow-x: hidden;
     /* Disable horizontal scroll */
-    padding-top: 20px;
-    color: #818181;
+    padding: 10px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;    
 }
 
 /* The navigation menu links */
 .sidenav a {
-    padding: 6px 8px 6px 16px;
     text-decoration: none;
     font-size: 25px;
-    color: #818181;
+    color: white;
     display: block;
 }
 
@@ -37,7 +37,7 @@
 .main {
     margin-left: 15%;
     /* Same as the width of the sidebar */
-    padding: 5px 5px;
+    padding: 5px 20px;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
