spaceinv laser fire added

--- a/games/spaceinv.css
+++ b/games/spaceinv.css
@@ -65,3 +65,15 @@ laser {
     bottom: 0;
     color: greenyellow;
 }
+
+bullet::before {
+    content: '|';
+}
+bullet {
+    font-family: 'Space Invaders';
+    font-size: 5mm;
+    position:absolute;
+    top: 0;
+    left: 0 ;
+    color: white;
+}
